--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="http://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
     <title>Pong</title>
 </head>
 <body>
