added speed increases for consecutive volleys and foundation for a menu in index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
     <canvas id="screen" width="1000px" height="600px"></canvas>
+    <div id="menu">
+        <div id="start-button">START</div>
+        <div id="options">
+            <div id="slider"></div>
+            <div id="win-selector"></div>
+        </div>
+        <div id="reset-button">RESET</div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
