--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <canvas id="screen" width="1000px" height="600px"></canvas>
     <div id="menu">
-        <div id="start-button">START</div>
+        <div id="start-button"><p>START</p></div>
         <div id="options">
             <div id="slider"></div>
             <div id="win-selector"></div>
         </div>
-        <div id="reset-button">RESET</div>
+        <div id="reset-button"><p>RESET</p></div>
     </div>
     <script src="app.js"></script>
 </body>
