--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link href="http://fonts.cdnfonts.com/css/8bit-wonder" rel="stylesheet">
-    <title>Pong</title>
+    <title>PONG-ish</title>
 </head>
 <body>
     <canvas id="screen" width="1000px" height="600px"></canvas>
